@@ -13544,6 +13544,14 @@
       </location>
       <location>
         <!-- Translators: This is in Virginia in the United States. -->
+        <_name>Blacksburg</_name>
+        <code>KBCB</code>
+        <zone>VAZ014</zone>
+        <radar>roa</radar>
+        <coordinates>37-13N 080-25W</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Virginia in the United States. -->
         <_name>Chantilly-Dulles International Airport</_name>
         <code>KIAD</code>
         <zone>DCZ013</zone>
@@ -13787,7 +13795,7 @@
        <!-- Translators: This is in Virginia in the United States. -->
        <_name>Roanoke</_name>
        <zone>VAZ022</zone>
-       <radar>ric</radar>
+       <radar>roa</radar>
        <location>
          <!-- Translators: This is in Roanoke, Virginia in the United States. -->
          <_name>Roanoke</_name>
