@@ -1,3 +1,8 @@
+2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
+
+	* Locations.xml.in: Updates to Virginian locations from
+	serac@vt.edu (Bug #469356).
+
 2007-08-01  Callum McKenzie  <callum@spooky-possum.org>
 
 	* docs/nl/nl.po: Fix an incorrectly transcribed tag (see bug
